# redditor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  blackhat.py  pyproject.toml  redditor.code-workspace  requirements.txt
.github/workflows/: container_experiments-app.yml
logs/: .gitignore
src/redditor/: __init__.py  ai.py  main.py
src/redditor/server/: server.py
src/redditor/server/static/: styles.css
src/redditor/server/templates/: index.html
